# microdb

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  RELEASE_LOG.md  ROOT_SPEC_CORE_VS_PRO.md  SUPPORT.md  TODO.md  library.json  library.properties
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: baseline-rollup.yml  ci.yml  fs-matrix-baseline-refresh.yml  managed-baseline-refresh.yml  nightly-fuzz.yml  nightly-soak.yml  release.yml
bench/lox_esp32_s3_bench/: MEGA_BENCH_TEST_PLAN.md  README.md  lox.h  lox_esp32_s3_bench.ino  run_bench.ps1
bench/loxdb_esp32_s3_bench_base/: README.md  lox.h  loxdb_esp32_s3_bench_base.ino
bench/loxdb_esp32_s3_bench_head/: README.md  run_bench.ps1
bench/loxdb_esp32_s3_sd_stress_bench/: README.md  TODO.md  bench_admission.h  lox_json_wrapper.h  loxdb_esp32_s3_sd_stress_bench.ino
bench/microdb_esp32_s3_bench/: README.md  microdb.h  microdb_esp32_s3_bench.ino  run_bench.ps1
cmake/: loxdbConfig.cmake.in
docs/: BACKEND_INTEGRATION_GUIDE.md  BENCHMARKS.md  CORE_INVARIANTS.md  DOCS_MAP.md  DOCS_SYNC_PLAN.md  EDITIONS.md  FAIL_CODE_CONTRACT.md  FOOTPRINT_MIN_CONTRACT.md  FREE_EDITION_LICENSING.md  FS_BLOCK_ADAPTER_CONTRACT.md  GETTING_STARTED_5_MIN.md  GETTING_STARTED_DEV_10_MIN.md  GOLDEN_PROFILES.md  IMPLEMENTATION_STATUS_VERIFIED.md  LIMITS_AND_FAILURES.md  MANAGED_STRESS_BASELINES.md  MEGA_TEST_CHECKLIST_STATUS.md  OFFLINE_VERIFIER.md  PORT_AUTHORING_GUIDE.md  PROFILES.md  PROGRAMMER_MANUAL.md  README.md  RELEASE_CHECKLIST.md  REL_CORRUPTION_CORPUS.md  SAFETY_NOTES.md  SAFETY_READINESS.md  SCHEMA_MIGRATION_GUIDE.md  SD_STRESS_BENCH.md  STARTUP_DECISION_FLOW.md  TEST_SUITE_SIZE.md  THREAD_SAFETY.md  TROUBLESHOOTING.md  WCET_ANALYSIS.md  release-notes.md  repository-topics.md
docs/internal/: CHANGE_CYCLE_CHECKLIST.md  LOXDB_PRO_BACKLOG.md  MAINTAINER_TODO.md  PRODUCT_BRIEF.md  PRODUCT_POSITIONING.md  PROFESSIONAL_READINESS.md  PROFILE_GUARANTEES.md  RELEASE_LOG.md  RELEASE_TAG_TEMPLATE.md  SAFETY_READINESS.md  TODO.md  release-notes.md
docs/results/: bench_verdict_20260511.md  esp32_sd_stress_20260511_113124_4d1fd65_com19.csv  esp32_sd_stress_20260511_113124_4d1fd65_com19.md  hard_verdict_20260412.md  hard_verdict_20260419.md  sd_stress_template.md  trend_dashboard.md  validation_summary_20260412_172006.md  validation_summary_20260412_181940.md  validation_summary_20260412_182103.md  validation_summary_20260412_200336.md  validation_summary_20260412_203442.md  validation_summary_20260419_173440.md  validation_summary_20260419_193234.md
examples/aligned_block_port/: README.md  main.c
examples/esp32_sensor_node/: main.c
examples/freertos_port/: README.md  main.c
examples/posix_simulator/: README.md  main.c
examples/sd_fatfs_port/: README.md  main.c
examples/zephyr_port/: README.md  main.c
include/: lox.h  lox_backend_adapter.h  lox_backend_aligned_adapter.h  lox_backend_compat.h  lox_backend_decision.h  lox_backend_fs_adapter.h  lox_backend_managed_adapter.h  lox_backend_open.h  lox_capacity_profile.h  lox_cpp.hpp  lox_cpp_storage_profile.hpp  lox_import_export.h  lox_json_wrapper.h  lox_wcet.h  microdb.h  microdb_backend_adapter.h  microdb_backend_aligned_adapter.h  microdb_backend_compat.h  microdb_backend_decision.h  microdb_backend_fs_adapter.h  microdb_backend_managed_adapter.h  microdb_backend_open.h  microdb_capacity_profile.h  microdb_cpp.hpp  microdb_cpp_storage_profile.hpp  microdb_import_export.h  microdb_json_wrapper.h  microdb_wcet.h
port/esp32/: lox_port_esp32.c  lox_port_esp32.h  microdb_port_esp32.c  microdb_port_esp32.h
port/posix/: lox_port_posix.c  lox_port_posix.h  microdb_port_posix.c  microdb_port_posix.h
port/ram/: lox_port_ram.c  lox_port_ram.h  microdb_port_ram.c  microdb_port_ram.h
scripts/: apply-fs-matrix-thresholds.ps1  apply-managed-thresholds.ps1  build-baseline-rollup.ps1  finalize-fs-matrix-calibration.ps1  finalize-managed-calibration.ps1  package-release.ps1  package-release.sh  recommend-fs-matrix-baselines.ps1  recommend-managed-baselines.ps1  run_esp32_bench_and_update_docs.ps1  run_sd_stress_bench.ps1  run_static_analysis.sh  run_static_analysis_style.sh  update_benchmarks_md.ps1  validate_arduino_bench_layout.ps1
security/: public.asc
src/: lox_crc.h  lox_internal.h  lox_rel.c  lox_ts.c  lox_wal.c  loxdb.c  microdb.c  microdb_arena.h  microdb_crc.c  microdb_internal.h  microdb_kv.c  microdb_rel.c  microdb_ts.c  microdb_wal.c
src/backends/: lox_backend_aligned_adapter.c  lox_backend_aligned_stub.c  lox_backend_block_stub.c  lox_backend_compat.c  lox_backend_decision.c  lox_backend_emmc_stub.c  lox_backend_fs_adapter.c  lox_backend_fs_stub.c  (+18 more)
tests/: check_footprint_min_size.cmake  check_invalid_pct_sum.cmake  check_optional_backends_unlinked.cmake  check_optional_modules_unlinked.cmake  check_tiny_size.cmake  footprint_min_baseline.c  invalid_pct_sum.c  microtest.h  soak_runner.c  test_api_contract_matrix.c  test_backend_aligned_adapter.c  test_backend_aligned_recovery.c  test_backend_compat.c  test_backend_decision.c  test_backend_fs_adapter.c  test_backend_fs_matrix.c  test_backend_fs_recovery.c  test_backend_managed_adapter.c  test_backend_managed_recovery.c  test_backend_managed_stress.c  test_backend_open.c  test_backend_registry.c  test_capacity_estimator_model.c  test_compact.c  test_cpp_wrapper.cpp  test_durability_closure.c  test_error_strings.c  test_fail_code_contract.c  test_import_export.c  test_import_export_fuzz.c  test_integration.c  test_json_wrapper.c  test_kv.c  test_kv_reject.c  test_limits.c  test_migration.c  test_offline_verifier.c  test_preflight.c  test_profile_matrix.c  test_realdata_integration.c  (+19 more)
tools/: check_boundary_rules.ps1  lox_verify.c  microdb_capacity_estimator.html  microdb_verify.c  run_full_validation.ps1
wiki/: Architecture.md  Configuration.md  Getting-Started.md  Home.md  Integration.md  Storage-HAL.md  Testing.md  _Sidebar.md
(+33 files in other folders)
